--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     background-position: center;
     background-attachment: fixed;
     font-family: Arial, sans-serif;
+    margin:5%
+
 }
 
 h1 {
